--- a/bootstrap4.1/css/styles.css
+++ b/bootstrap4.1/css/styles.css
@@ -15,6 +15,18 @@ h1 {
 	padding: 0.5%;
 }
 
-.orange {
-	background-color: orange;
+.fondo {
+	background-color: white;
+}
+
+.fondob {
+	background-color: #bfbfbf;
+}
+
+.shadow-lg {
+	box-shadow: 0 1rem 3rem rgb(0, 0, 0,0.7) !important;
+}
+
+.mov {
+	padding: 0.5%;
 }
