añadiendo efecto scroll de proyectos

--- a/bootstrap4.1/css/styles.css
+++ b/bootstrap4.1/css/styles.css
@@ -24,6 +24,13 @@ nav a {
 	color: #e31808;
 }
 
+.back:hover {
+	color: #FFF;
+}
+
+.proyec:hover {
+	color: #21ff00;
+}
 .telegram:hover {
 	color: #0eb4f5;
 }
