--- a/calculadoraunet/css/styles.css
+++ b/calculadoraunet/css/styles.css
@@ -1,13 +1,41 @@
 .acomodar {
 	display: flex;
-	align-items: end;
+	justify-content: center;
+	align-items: flex-end;
 }
-
+.ancho { width: 100%; }
 .row-1 {
 	display: flex;
 	justify-content: center;
 }
 
 select {
-	text-align: center;
+	text-align-last: center;
+}
+
+.btn {
+	background-color: #112093;
+	color: #fff;
+	border: 2px solid #112093;
+}
+
+.hover-person:hover {
+	transition: all 1s ease;
+	background-color: #fff;
+	color: #112093;
+	border: 2px solid #112093;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { 
+	-moz-appearance:textfield; 
+}
+
+.modal {
+	top: 25%;
 }
