--- a/bootstrap/css/styles.css
+++ b/bootstrap/css/styles.css
@@ -10,7 +10,7 @@ nav {
 	padding: 0;
 	margin: 0;
 	width: 100%;
-	border-bottom: 1px solid #21ff00;
+	border-bottom: 1px solid #ff0707;
 }
 
 nav a {
@@ -59,7 +59,7 @@ nav a span {
 }
 
 .navbar {
-	background-color: #000;
+	background-color: #1642a8f0;
 }
 
 /***	end-nav		***/
@@ -166,7 +166,7 @@ nav a.labelmenu {
 }
 
 .navbar-dark .navbar-toggler {
-	border-color: rgba(223, 223, 223, 0.58);
+	border-color: rgba(223, 223, 223);
 }
 
 nav a:hover {
@@ -190,8 +190,8 @@ nav a:hover {
 
 footer {
 	color: #fff;
-	background-color: #000;
-	border-top: 1px solid #21ff00;
+	background-color: #1642a8f0;
+	border-top: 1px solid #ff0707;
 }
 
 footer p {
@@ -222,7 +222,7 @@ footer p {
 }
 
 .btn-neg {
-	background-color: black;
+	background-color: #1642a8c7;
 	color: #fff;
 	font-weight: bold;
 }
@@ -230,11 +230,21 @@ footer p {
 button.btn {
 	width: 70%;
 	transition: all 1.5s;
-	border: 2px solid #000;
+	border: 2px solid #1b2a64e3;
 }
 
 button.btn:hover {
-	color: #262626;
-	background-color: #fff;
+	color: #fff;
+	background-color: #1b2a64e3;
 	transition: all 1s;
+}
+
+nav button.boton-menu {
+	padding: 0.25rem 0.75rem;
+	font-size: 1.25rem;
+	line-height: 1;
+	color: #fff;
+	background-color: transparent;
+	border: 1px solid #fff !important;
+    border-radius: 0.25rem;
 }
