--- a/proyectos/tenisstore/css/style.css
+++ b/proyectos/tenisstore/css/style.css
@@ -3,7 +3,9 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: 'Times New Roman', Times, serif;
-    
+    background-image: url('../img/fondo4.jpg');
+	height: 100vh;
+	background-size: auto;
 }
 
 .title-oscuro {
