--- a/proyectos/torneo-deportes/css/styles.css
+++ b/proyectos/torneo-deportes/css/styles.css
@@ -3,8 +3,9 @@ html {
 }
 
 body {
-	background-image: linear-gradient(#0069d9, #fff);
+	background-image: url('../../../imgs/fondo2.jpg');
 	height: 100vh;
+	background-size: contain;
 }
 
 .form-style {
@@ -13,11 +14,15 @@ body {
 	flex-direction: column;
 	align-items: center;
 	border: 4px solid #000;
-	background-image: linear-gradient(#f9f9f9, #a8a8a8);
+	background-color: #f5f5f5;
 }
 
 .form-register {
 	width: 85%;
+}
+
+.color-a a, .color-a span {
+	color: #fff !important;
 }
 
 @media (max-width: 991px){
@@ -35,7 +40,6 @@ body {
 }
 
 .navbar {
-	background-image: linear-gradient(#26b708, #000000a3);
 	margin-bottom: 40px;
 	border-bottom: 4px solid #000;
 }
