--- a/bootstrap/css/styles.css
+++ b/bootstrap/css/styles.css
@@ -84,7 +84,7 @@ nav a span {
 	background-repeat: no-repeat;
     background-position: center center;
 	background-size: cover;
-	height: 350px;
+	height: 100vh;
     display: flex;
     justify-content: center;
 	align-items: center;
@@ -247,4 +247,19 @@ nav button.boton-menu {
 	background-color: transparent;
 	border: 1px solid #fff !important;
     border-radius: 0.25rem;
+}
+
+#disenos {
+	background-color: #ff00007d;
+}
+
+#disenos img {
+	width: 100%;
+	height: 300px;
+}
+
+.col-img-d {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
